# IMHuS

./: README.md
src/imhus_system/_imhus_navigation/: CMakeLists.txt  package.xml
src/imhus_system/agents_layer/src/: agents_layer.cpp  base_agents_layer.cpp
src/imhus_system/imhus/: CMakeLists.txt  package.xml
src/imhus_system/imhus/config/goals/elevator/: goals (copie 1).xml  goals.xml
src/imhus_system/imhus/config/imhus_nav_config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
src/imhus_system/imhus/include/: bossUI.h  imhus.h  imhusManager.h
src/imhus_system/imhus/include/actions/: asyncActionReq.h  asyncActionRes.h  commandAction.h  compoundTask.h  compoundTasks.h  goToAction.h  lookAtAction.h  navigateAction.h  publishAction.h  turningAction.h  waitAction.h
src/imhus_system/imhus/include/agents/: agent.h  entity.h  group.h  human.h  robot.h
src/imhus_system/imhus/include/agents/state/: conflictState.h  entityState.h  goToState.h  goToState_WO_ORCA.h  idleState.h  waitState.h
src/imhus_system/imhus/include/map/: map.h  object.h  objects.h  pose.h  poses.h  socialPose.h  socialSpace.h  socialSpaces.h
src/imhus_system/imhus/include/scenario/: scenario.h  scenarios.h  step.h  steps.h
src/imhus_system/imhus/launch/: imhus.launch  imhus_nav.launch
src/imhus_system/imhus/launch/include/: _locate_pub.launch  _map_static.launch  _nav.launch  _rviz.launch
src/imhus_system/imhus/maps/elevator/: elevator.pgm  elevator.yaml  elevator_pov.pgm
src/imhus_system/imhus/maps/laas_adream/: goals.xml  inhus.xml
src/imhus_system/imhus/maps/to_reconfigure/corridor_hri/: goals.xml
src/imhus_system/imhus/maps/to_reconfigure/narr_corridor_hri/: goals.xml
src/imhus_system/imhus/maps/to_reconfigure/passage_hri/: goals.xml
src/imhus_system/imhus/msg/: AsyncAction_msgs.msg
src/imhus_system/imhus/rviz/: imhus.rviz
src/imhus_system/imhus/src/: agents_tracker.py  bossUI_node.cpp  imhus.cpp  imhusManager_node.cpp  imhus_orca.py
src/imhus_system/imhus/src/actions/: asyncActionReq.cpp  asyncActionRes.cpp  commandAction.cpp  compoundTask.cpp  compoundTasks.cpp  goToAction.cpp  lookAtAction.cpp  navigateAction.cpp  publishAction.cpp  turningAction.cpp  waitAction.cpp
src/imhus_system/imhus/src/agents/: agent.cpp  entity.cpp  group.cpp  human.cpp  robot.cpp
src/imhus_system/imhus/src/agents/state/: conflictState.cpp  entityState.cpp  goToState copy.cpp  goToState.cpp  goToState_WO_ORCA.cpp  idleState.cpp  waitState.cpp
src/imhus_system/imhus/src/map/: map.cpp  object.cpp  objects.cpp  pose.cpp  poses.cpp  socialPose.cpp  socialSpace.cpp  socialSpaces.cpp
src/imhus_system/imhus/src/scenario/: scenario.cpp  scenarios.cpp  step.cpp  steps.cpp
src/simulators/gazebo/: CMakeLists.txt  package.xml
src/simulators/gazebo/include/: actor_plugin.hh  elevator_plugin.hh
src/simulators/gazebo/launch/: gazebo.launch
src/simulators/gazebo/models/: laas_adream.dae
src/simulators/gazebo/models/actor/: _walk.dae  model.config  model.sdf  moonwalk.dae  stand.dae
src/simulators/gazebo/models/actor/meshes/: ANIMATION_standing.dae
src/simulators/gazebo/src/: actor_plugin.cc  dummy_tf_br.py  elevator_plugin.cc  tf_br_robot.py
src/simulators/gazebo/src/to_delete/: agentsBridge.py  human_controller.py
src/simulators/gazebo/world/: elevator.world  laas_adream.world
videos/: goals.xml
